--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -1,9 +1,8 @@
 body {
-  font-family: 'Roboto', sans-serif;/* fondo gris claro 1E1E1E  */
-  background-color: 		#1E1E1E ; /* fondo gris claro verde = a4ff00 */
+  font-family: 'Roboto', sans-serif;
+  background-color: 		#1E1E1E ; 
   color:aliceblue;
 }
-/* fondo azul = 6060d6 */
 .genre-card {
   background-color: 	#817f7f69;
   border-radius: 12px;
@@ -36,7 +35,7 @@ body {
   padding-bottom: 20px;
 }
 .header-personalizado {
-  background-color: #1E1E1E; /* azul oscuro */
+  background-color: #1E1E1E; 
   position: relative;
   z-index: 1;
 }
@@ -64,7 +63,7 @@ body {
   box-shadow:0 0 10px #b8ad34;
 }
 
-.btn-edit-gen {/*verde antiuguo 24c158*/
+.btn-edit-gen {
   background-color: #90c55a;
   color: black;
   border: none;
@@ -78,11 +77,11 @@ body {
 }
 .footer-con-imagen {
   position: relative;
-  height: 60px; /* Ajusta según el tamaño de la imagen */
+  height: 60px;
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  background-color: #1E1E1E; /* Opcional, o transparente */
+  background-color: #1E1E1E;
 }
 
 .footer-con-imagen img {
